tests/NormalTests/paczka1/fuzzy1/33948384.err
Error in line 1: qzXh95z S454 28,7
Error in line 20: r1LIoQ S487 23,1
Error in line 28: S193 S193 74,0
Error in line 27: x02jc63w S193 76,8
Error in line 22: ssOoYoZDa S193 50,0
